debugging flexbox gap bug v0.0.1

--- a/css/style.css
+++ b/css/style.css
@@ -829,18 +829,14 @@ body {
     margin-block-end: 0.75rem;
   }
 }
-.hero-body {
-  padding-block-start: 1.25rem;
-}
-
 @media only screen and (max-width: 767.99px), only screen and (min-width: 768px) and (max-width: 1198.99px) {
   .hero-body {
-    padding-block-end: 2.5rem;
+    margin-block-end: 2.5rem;
   }
 }
 @media only screen and (min-width: 1199px) {
   .hero-body {
-    padding-block-end: 3.5rem;
+    margin-block-end: 3.5rem;
   }
 }
 #projects {
@@ -884,7 +880,7 @@ body {
     --p-transition-color: hsl(var(--clr-primary-600));
   }
 }
-@media only screen and (min-width: 768px) {
+@media only screen and (max-width: 767.99px), only screen and (min-width: 768px) {
   #navigation {
     margin-block-end: 3.5rem;
   }
