--- a/scss/layouts/_navigation.scss
+++ b/scss/layouts/_navigation.scss
@@ -1,10 +1,7 @@
 @use '../abstracts' as *;
 
 #navigation {
-    // @media #{$break1} {
-    //     margin-block-end: 3.5rem; 
-    // }
-    @media #{$break2open} { 
+    @media #{$break1}, #{$break2open} { 
         margin-block-end: 3.5rem; 
     }
 }
